# MaskQL

./: .env.example  .git-sync  .github-sync  .gitignore  .gitlab-ci.yml  .gitmodules  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  compose.dev.yml  compose.yml  pyproject.toml  requirements.txt  tls.yml  tox.ini
.github/workflows/: ci.yml
compose/: .env.example  compose.dev.yml
docs/: QUICKSTART.md
frontend/: dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  auth.ts  http.ts  main.ts
frontend/src/components/: CatalogForm.vue  MainSidebar.vue  RuleManager.vue  RuleScopePanel.vue  UserForm.vue
frontend/src/constants/: trinoDbms.ts
frontend/src/router/: index.ts
frontend/src/types/: base.ts  catalog.ts  index.ts  rule.ts  user.ts
frontend/src/views/: CatalogCreatePage.vue  CatalogPage.vue  CatalogsPage.vue  LoginPage.vue  UserCreatePage.vue  UserEditPage.vue  UserListPage.vue  UserRulesPage.vue
maskql/: app.py  core.py  db.py  db_events.py  deps.py  dockerfile  requirements.txt  start.sh
maskql/alembic/: env.py  seeds.py
maskql/alembic/versions/: 088e552dd96b_split_rule_path.py  0c58a38876bf_create_catalog_table.py  44104adecd3f_add_user_and_password_to_catalog.py  48264c38fbbb_add_user_model.py  7b2a4755c34b_add_rules_model.py  7c0d6f4f2f1a_add_manual_flags_to_catalog_schema_entries.py  d51ba73b550a_add_check_constraint_on_catalogs_name.py  e1b8e6b7b9c1_add_catalog_schema_entries.py
maskql/models/: __init__.py  catalog.py  catalog_schema.py  rule.py  user.py
maskql/routers/: acl.py  catalog.py  trino_proxy.py
maskql/routes/: acl.py  admin_auth.py  catalog.py  rule.py  trino_proxy.py  user.py
maskql/schemas/: catalog.py  rule.py  user.py
maskql/security/: password.py
maskql/services/: catalog_service.py  rule_service.py  user_service.py
maskql/utils/: trino.py
paper/: paper.bib  paper.md
scripts/: build-trino-plugin.sh
tests/: postgresql-init.sql  test_acl_api.py  test_auth_routing.py  test_catalog_api.py  test_catalog_service.py  test_crypto.py  test_masking.py  test_rule_api.py  test_trino_masking.py  test_user_api.py
trino/: Dockerfile  dockerfile
trino/etc-template/: access-control.properties  config.properties  jvm.config  rules.json
trino/etc-template/catalog/: test_db.properties.old
trino/plugins/maskql-acl/: pom.xml
trino/plugins/maskql-plugin/: pom.xml
trino/python/: download_edspseudo.py  load_edspseudo.py
(+13 files in other folders)
