[project]
name = "maskql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tox>=4.28.4",
    "trino>=0.336.0",
]

[tool.semantic_release]
# Use Conventional Commits (Angular style: feat, fix, feat!, BREAKING CHANGE, …)
commit_parser = "conventional"
tag_format = "v{version}"
version_source = "tag"
allow_zero_version = true
branch = "main"
upload_to_repository = false

[tool.semantic_release.remote]
type = "gitlab"
domain = "gitlab.domchurs.ad"
api_domain = "gitlab.domchurs.ad"
token = { env = "push_token" }