[project]
name = "maskql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "tox>=4.28.4",
    "trino>=0.336.0",
    "uvicorn[standard]==0.30.3",
]

[tool.semantic_release]
# Use Conventional Commits (Angular style: feat, fix, feat!, BREAKING CHANGE, …)
commit_parser = "conventional"
tag_format = "v{version}"
version_source = "tag"
allow_zero_version = true
branch = "main"
upload_to_repository = false

[tool.semantic_release.remote]
type = "gitlab"
domain = "gitlab.domchurs.ad"
api_domain = "gitlab.domchurs.ad"
token = { env = "push_token" }
