[project]
name = "maskql"
version = "1.3.0"
description = "Open-source middleware built on Trino to mask, filter, and transform database data on the fly"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "tox>=4.28.4",
    "trino>=0.336.0",
    "uvicorn[standard]==0.30.3",
]

[tool.semantic_release]
commit_parser = "conventional"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"
allow_zero_version = false
version_toml = ["pyproject.toml:project.version"]
version_variables = ["maskql/app.py:APP_VERSION"]

[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

[tool.semantic_release.remote]
type = "github"
